--- a/_notes/argot/.obsidian/workspace
+++ b/_notes/argot/.obsidian/workspace
@@ -10,7 +10,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "The Many-Bodied Shadow of War Lore.md",
+            "file": "whos gonna pay for those therapy sessions amirite.md",
             "mode": "source"
           }
         }
@@ -72,7 +72,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "The Many-Bodied Shadow of War Lore.md"
+                "file": "whos gonna pay for those therapy sessions amirite.md"
               }
             }
           },
@@ -82,7 +82,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "The Many-Bodied Shadow of War Lore.md"
+                "file": "whos gonna pay for those therapy sessions amirite.md"
               }
             }
           },
@@ -102,6 +102,8 @@
     "collapsed": true
   },
   "lastOpenFiles": [
+    "whos gonna pay for those therapy sessions amirite.md",
+    "The 13 Islands of the Haunted Sea.md",
     "The Many-Bodied Shadow of War Lore.md",
     "Interpretations of the Many-Bodied.md",
     "Lore.md",
