--- a/_notes/argot/.obsidian/workspace
+++ b/_notes/argot/.obsidian/workspace
@@ -56,7 +56,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 241.0036334991455
   },
   "right": {
     "id": "0463e72fe1866df5",
@@ -98,19 +98,18 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300,
-    "collapsed": true
+    "width": 300
   },
   "lastOpenFiles": [
     "argotIndex.md",
+    "Meh.md",
+    "A completely avoidable international incident.md",
+    "Livius Anastasius Cratius.md",
+    "The Argotnauts.md",
+    "Sora Nemmonis.md",
     "The Deathless One.md",
     "The Feud on Hama.md",
     "Abraham Washington.md",
-    "Malory Whisperbottom.md",
-    "whos gonna pay for those therapy sessions amirite.md",
-    "The 13 Islands of the Haunted Sea.md",
-    "The Many-Bodied Shadow of War Lore.md",
-    "Interpretations of the Many-Bodied.md",
-    "Lore.md"
+    "Malory Whisperbottom.md"
   ]
 }
