--- a/_notes/argot/.obsidian/workspace
+++ b/_notes/argot/.obsidian/workspace
@@ -102,6 +102,7 @@
   },
   "lastOpenFiles": [
     "argotIndex.md",
+    "Antagonists.md",
     "Meh.md",
     "A completely avoidable international incident.md",
     "Livius Anastasius Cratius.md",
@@ -109,7 +110,6 @@
     "Sora Nemmonis.md",
     "The Deathless One.md",
     "The Feud on Hama.md",
-    "Abraham Washington.md",
-    "Malory Whisperbottom.md"
+    "Abraham Washington.md"
   ]
 }
