added snow snow in the snu snu
- added stuff in the founders drafts folders

--- a/_wikis/.obsidian/workspace
+++ b/_wikis/.obsidian/workspace
@@ -4,14 +4,14 @@
     "type": "split",
     "children": [
       {
-        "id": "a8ee78898c1b932f",
+        "id": "4acc27b6f70a90e6",
         "type": "leaf",
         "active": true,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "founders/_drafts/Public Character Sheets.md",
-            "mode": "source"
+            "file": "argot/snu snu in the snow snow.md",
+            "mode": "preview"
           }
         }
       }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "argot index"
+                "query": "esteban"
               }
             }
           },
@@ -56,7 +56,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 466.0036334991455
+    "width": 384.5036334991455
   },
   "right": {
     "id": "7e9cfbb46fcca03f",
@@ -72,7 +72,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "founders/_drafts/Public Character Sheets.md"
+                "file": "argot/snu snu in the snow snow.md"
               }
             }
           },
@@ -90,7 +90,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "founders/_drafts/Public Character Sheets.md"
+                "file": "argot/snu snu in the snow snow.md"
               }
             }
           }
@@ -102,15 +102,15 @@
     "collapsed": true
   },
   "lastOpenFiles": [
-    "founders/_drafts/Untitled.md",
-    "founders/_drafts/names.md",
-    "argot/Characters/Nahk.md",
-    "argot/_drafts/It is Dark and Hell is Hot.md",
-    "argot/Characters/Casimir Flüf.md",
-    "argot/Characters/Antagonists.md",
-    "argot/Abraham Washington.md",
-    "argot/Hobbes.md",
-    "argot/Malbec Riesling.md",
-    "argot/Malory Whisperbottom.md"
+    "argot/snu snu in the snow snow.md",
+    "argot/_drafts/Next Episode.md",
+    "argot/The 13 Islands of the Haunted Sea.md",
+    "argot/Arcs.md",
+    "argot/Index Argot.md",
+    "argot/_drafts/snu snu in the snow snow.md",
+    "argot/_drafts/Next episode.md",
+    "argot/Wow good thing he didnt have time stop and that you didnt blow that horn.md",
+    "argot/Sad Slaad the Salad Lad.md",
+    "argot/_drafts/It is Dark and Hell is Hot.md"
   ]
 }
