--- a/_wikis/.obsidian/config
+++ b/_wikis/.obsidian/config
@@ -34,5 +34,9 @@
   "enabledPlugins": [],
   "newFileLocation": "current",
   "promptDelete": false,
-  "alwaysUpdateLinks": true
+  "alwaysUpdateLinks": true,
+  "foldHeading": true,
+  "foldIndent": true,
+  "showLineNumber": true,
+  "spellcheck": true
 }
