--- a/_wikis/.obsidian/workspace
+++ b/_wikis/.obsidian/workspace
@@ -11,7 +11,7 @@
           "type": "markdown",
           "state": {
             "file": "argot/snu snu in the snow snow.md",
-            "mode": "preview"
+            "mode": "source"
           }
         }
       }
