--- a/_wikis/.obsidian/workspace
+++ b/_wikis/.obsidian/workspace
@@ -4,13 +4,13 @@
     "type": "split",
     "children": [
       {
-        "id": "bd20e1c785f298c9",
+        "id": "bab02c6ac7bd9d26",
         "type": "leaf",
         "active": true,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "argot/those girls were actually digidestined to cure cancer so.md",
+            "file": "templates/template.md",
             "mode": "source"
           }
         }
@@ -40,7 +40,12 @@
             "state": {
               "type": "search",
               "state": {
-                "query": ""
+                "query": "",
+                "matchingCase": false,
+                "explainSearch": false,
+                "collapseAll": false,
+                "extraContext": false,
+                "sortOrder": "alphabetical"
               }
             }
           },
@@ -56,7 +61,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 324.0036334991455
+    "width": 332.0036334991455
   },
   "right": {
     "id": "7e9cfbb46fcca03f",
@@ -72,7 +77,12 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "argot/those girls were actually digidestined to cure cancer so.md"
+                "file": "templates/template.md",
+                "collapseAll": false,
+                "extraContext": false,
+                "sortOrder": "alphabetical",
+                "backlinkCollapsed": false,
+                "unlinkedCollapsed": true
               }
             }
           },
@@ -90,7 +100,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "argot/those girls were actually digidestined to cure cancer so.md"
+                "file": "templates/template.md"
               }
             }
           }
@@ -101,15 +111,15 @@
     "width": 142.53768920898438
   },
   "lastOpenFiles": [
+    "templates/template.md",
+    "argot/Dont talk back.md",
+    "argot/_drafts/Next Episode.md",
+    "argot/Index Argot.md",
+    "argot/Arcs.md",
+    "argot/The 13 Islands of the Haunted Sea.md",
+    "argot/_drafts/Untitled.md",
     "argot/those girls were actually digidestined to cure cancer so.md",
     "argot/snu snu in the snow snow.md",
-    "argot/_drafts/It is Dark and Hell is Hot.md",
-    "argot/_drafts/Next Episode.md",
-    "argot/_drafts/Siege Planning.md",
-    "argot/_drafts/those girls were actually digidestined to cure cancer so.md",
-    "argot/pod squad.md",
-    "Siege Planning.md",
-    "founders/_drafts/3000 Systems/3200 Stats/3210 Force/3210 Force.md",
-    "founders/_drafts/3000 Systems/3200 Stats/3220 Calm/3234 Field medicine.md"
+    "cardamom_town/_drafts/Player Characters.md"
   ]
 }
